# veirisa-diplom

./: LICENSE  README.md  name_getter.h
Diplom/: CMakeLists.txt  main.cpp  name_getter.h  source.h  structures.h  wilcoxon.py
Diplom/EA/: representative.cpp  representative.h
Diplom/EA/Basic/: abstract_opl.cpp  abstract_opl.h
Diplom/EA/Basic/opl/: opl.cpp  opl.h
Diplom/EA/Basic/opl_Ab/: opl_Ab.cpp  opl_Ab.h
Diplom/EA/Basic/opl_separating/: opl_separating.cpp  opl_separating.h
Diplom/EA/Default Q-learning/: abstract_oplQ.cpp  abstract_oplQ.h
Diplom/EA/Default Q-learning/oplQ/: oplQ.cpp  oplQ.h
Diplom/EA/Default Q-learning/oplQ_separating/: oplQ_separating.cpp  oplQ_separating.h
Diplom/EA/Normalized Q-learning/: abstract_oplNQ.cpp  abstract_oplNQ.h
Diplom/EA/Normalized Q-learning/oplNQ/: oplNQ.cpp  oplNQ.h
Diplom/EA/Normalized Q-learning/oplNQ_log/: oplNQ_log.cpp  oplNQ_log.h
Diplom/EA/Q-learning/: abstract_oplQ.cpp  abstract_oplQ.h
Diplom/EA/Q-learning/oplQ/: oplQ.cpp  oplQ.h
Diplom/EA/Q-learning/oplQ_separating/: oplQ_separating.cpp  oplQ_separating.h
Diplom/Results/LeadingOnes/Evaluations/: eval_oplQ_DIV.txt  eval_opl_Ab.txt
Diplom/Results/LeadingOnes/Generations/: gen_oplQ_DIV.txt  gen_opl_Ab.txt
Diplom/Results/OneMax/Evaluations/: eval_opl.txt  eval_oplQ_ABS.txt  eval_oplQ_BIN.txt  eval_oplQ_DIV.txt  eval_oplQ_SUB.txt  eval_oplQ_separating_DIV.txt  eval_oplQ_separating_SUB.txt  eval_opl_Ab.txt  eval_opl_separating.txt
Diplom/WModel/: w_model.cpp  w_model.h
Diplom/WModel/deceptiveness/: deceptiveness.cpp  deceptiveness.h
(+19 files in other folders)
